Details
-
Type:
Bug
-
Status: Closed
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 0.18
-
Fix Version/s: 0.19
-
Component/s: C++ Broker
-
Labels:None
Description
Ref: QPID-3892 and https://reviews.apache.org/r/5836/
Previous work added TopicExchange routing key matching to Acl lookup:
PUBLISH EXCHANGE routingkey=X
This same logic needs to be added to:
BIND EXCHANGE routingkey=X
UNBIND EXCHANGE routingkey=X
ACCESS EXCHANGE routingkey=X
The problem with current Acl match processing is that an Acl rule like
allow all BIND EXCHANGE routingkey=news.#
Will match only when a user literally uses routingkey=news.#
It will not match routingkey=news.usa nor =news.canada.toronto
This issue proposes to change the Acl match logic to treat all Acl rule
routingkey specifications as if they are TopicExchange patterns. User
requests match the Acl rule using TopicExchange pattern matching logic.